operators/manifests/mariadb-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mariadb-operator
  labels:
    app.kubernetes.io/name: mariadb-operator
