operators/manifests/mariadb-operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-operator-webhook
  namespace: mariadb-operator
  labels:
    app.kubernetes.io/name: mariadb-operator
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mariadb-operator
  ports:
    - name: webhook
      port: 443
      targetPort: 9443
      protocol: TCP
    - name: metrics
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: health
      port: 8081
      targetPort: 8081
      protocol: TCP
